--- a/app/src/main/res/layout/content_email_required.xml
+++ b/app/src/main/res/layout/content_email_required.xml
@@ -1,68 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootLayout"
     android:background="@color/colorWhite"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-
-    >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtInfo"
         android:layout_width="0dp"
         android:layout_height="@dimen/_85sdp"
-        android:text="@string/email_verification"
-        android:textSize="@dimen/_11sdp"
-        android:padding="@dimen/_3sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/dark_text_color"
         android:gravity="center|start"
         android:justificationMode="inter_word"
+        android:padding="@dimen/_3sdp"
+        android:text="@string/email_verification"
+        android:textColor="@color/dark_text_color"
+        android:textSize="@dimen/_11sdp"
         app:layout_constraintBottom_toTopOf="@+id/tilEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
-        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/txtInfo">
 
         <com.app.l_pesa.common.CommonInputLayout
 
             style="@style/customInputLayoutStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            >
+            android:layout_height="wrap_content">
 
             <com.app.l_pesa.common.CommonEditTextRegular
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@._- "
                 android:hint="@string/email_address"
                 android:inputType="textEmailAddress"
-                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@._- "
                 android:maxLength="45"
                 android:maxLines="1"
-                android:textColorHint="@color/color_gray_text"
                 android:textColor="@color/textColors"
+                android:textColorHint="@color/color_gray_text"
                 android:textSize="@dimen/_12sdp" />
 
         </com.app.l_pesa.common.CommonInputLayout>
@@ -74,23 +66,20 @@
         android:id="@+id/btnSubmit"
         android:layout_width="0dp"
         android:layout_height="@dimen/_40sdp"
-        android:fontFamily="@font/montserrat"
-        android:background="@drawable/bg_button_app"
-        android:text="@string/continue_"
-        android:focusable="true"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:textSize="@dimen/_12sdp"
-        android:textColor="@color/colorWhite"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:background="@drawable/bg_button_app"
+        android:focusable="true"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/continue_"
+        android:textAllCaps="true"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/_12sdp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
-
-
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tilEmail"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
