--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,11 +65,20 @@
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         android:textAllCaps="true"
+        app:layout_constraintTop_toBottomOf="@+id/barrier"
         android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
 
+        />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="buttonSignUp"
+        app:barrierDirection="top"
         />
 
     <com.app.l_pesa.common.CommonTextRegular
@@ -86,6 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
         />
 
     <com.app.l_pesa.common.CustomButtonRegular
@@ -103,6 +113,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+
          />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
