--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,16 @@
         app:layout_constraintTop_toBottomOf="@+id/txtTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/barrierText"
+
+        />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrierText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="textView"
+        app:barrierDirection="bottom"
         />
 
 
@@ -65,7 +75,7 @@
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         android:textAllCaps="true"
-        app:layout_constraintTop_toBottomOf="@+id/barrier"
+        app:layout_constraintTop_toBottomOf="@+id/barrierButton"
         android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +84,7 @@
         />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
+        android:id="@+id/barrierButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="buttonSignUp"
