--- a/app/src/main/res/layout/fragment_business_id_layout.xml
+++ b/app/src/main/res/layout/fragment_business_id_layout.xml
@@ -109,9 +109,9 @@
                         android:fontFamily="@font/montserrat"
                         android:hint="@string/edit_id_number"
                         android:inputType="text|textNoSuggestions"
-                        android:maxLength="15"
+                        android:maxLength="20"
                         android:maxLines="1"
-                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
+                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.#- "
                         android:textSize="@dimen/_12sdp"
 
                         />
