--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+   <!-- <style name="ToolBarTextAppearance">
+        <item name="android:fontFamily">@fonts/montserrat</item>
+    </style>-->
+
     <style name="customInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxStrokeColor">@color/colorAquaDeep</item>
         <item name="android:fontFamily">@font/montserrat</item>
