--- a/app/src/main/res/layout/activity_forgot_pin.xml
+++ b/app/src/main/res/layout/activity_forgot_pin.xml
@@ -149,6 +149,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tilPhone" />
 
+        <TextView
+            android:id="@+id/tvForgotTermPolicy"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center|bottom"
+            android:text="@string/privacy_term_condition_login"
+            android:textColor="@color/dark_text_color"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintTop_toBottomOf="@+id/barrier1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
 
 
 
