--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,8 @@
     <color name="text_color_blue">#597088</color>
     <color name="dark_text_color">#3b3e42</color>
     <color name="color_green_success">#0d8f4f</color>
+    <color name="color_facebook">#3c66c4</color>
+    <color name="color_google">#4286f5</color>
 
     <color name="default_thumb_color">#ff6f00</color>
     <color name="default_track_color">#c3a9a9a9</color>
