~Image Validation added...

--- a/app/src/main/res/layout/layout_registration_step_three.xml
+++ b/app/src/main/res/layout/layout_registration_step_three.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/rootLayout"
     android:background="@color/colorWhite"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-
-    >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtInfo"
