--- a/app/src/main/res/layout/activity_registration_step_three.xml
+++ b/app/src/main/res/layout/activity_registration_step_three.xml
@@ -9,9 +9,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        >
-
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,15 +19,9 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextAppearance="@style/Toolbar.TitleText">
-
-
-
         </androidx.appcompat.widget.Toolbar>
-
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/layout_registration_step_three"
-        />
+    <include layout="@layout/layout_registration_step_three" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
