--- a/app/src/main/res/layout/activity_email_verify.xml
+++ b/app/src/main/res/layout/activity_email_verify.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayoutVerify"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -28,43 +28,40 @@
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtHeader"
         android:layout_width="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         android:layout_height="@dimen/_50sdp"
-        android:text="@string/verification_code_one"
-        android:textSize="@dimen/_13sdp"
-        android:padding="@dimen/_3sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/dark_text_color"
-        android:textStyle="bold"
         android:gravity="center"
         android:justificationMode="inter_word"
-        app:layout_constraintBottom_toTopOf="@+id/otp_view"
+        android:padding="@dimen/_3sdp"
+        android:text="@string/verification_code_one"
+        android:textColor="@color/dark_text_color"
+        android:textSize="@dimen/_13sdp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <com.app.l_pesa.common.OtpView
         android:id="@+id/otpView"
         style="@style/OtpWidget.OtpView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="@dimen/_15sdp"
+        android:cursorVisible="true"
+        android:focusable="true"
+        android:gravity="center"
         android:inputType="number"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/_14sdp"
-        android:cursorVisible="true"
-        android:focusable="true"
-        app:cursorWidth="1px"
         app:cursorColor="@color/colorGreyDeep"
+        app:cursorWidth="1px"
         app:itemCount="6"
-        app:lineColor="@color/colorAquaDeep"
         app:itemSpacing="@dimen/_5sdp"
-        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
+        app:lineColor="@color/colorAquaDeep" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
