--- a/app/src/main/res/layout/layout_registration_step_one.xml
+++ b/app/src/main/res/layout/layout_registration_step_one.xml
@@ -127,6 +127,7 @@
         android:id="@+id/btnFacebook"
         android:layout_width="0dp"
         android:layout_height="@dimen/_40sdp"
+        android:visibility="gone"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_25sdp"
         android:layout_marginEnd="@dimen/_10sdp"
