--- a/app/src/main/res/layout/activity_profile_edit_statement_info.xml
+++ b/app/src/main/res/layout/activity_profile_edit_statement_info.xml
@@ -31,6 +31,8 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvNoItm"
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
