--- a/app/src/main/res/layout/add_statement_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/add_statement_bottomsheet_layout.xml
@@ -75,6 +75,7 @@
                     android:maxLines="1"
                     android:textSize="@dimen/_12sdp" />
                 <Spinner
+                    android:id="@+id/spStType"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:entries="@array/statement_list"
