statement upload module p-4

--- a/app/src/main/res/layout/statement_list_cell.xml
+++ b/app/src/main/res/layout/statement_list_cell.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/colorWhite"
-    android:layout_marginBottom="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_2sdp"
+    android:layout_marginTop="@dimen/_2sdp"
     android:layout_height="wrap_content">
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/tvName"
+        android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:textSize="@dimen/_15sdp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +23,15 @@
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/tvFile"
+        android:singleLine="true"
+        android:ellipsize="start"
+        android:textColor="@color/colorSemiBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:textSize="@dimen/_14sdp"
+        android:layout_marginTop="8dp"
+        android:textSize="@dimen/_12sdp"
+        app:layout_constraintEnd_toStartOf="@+id/imgMore"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvName"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="statements.pdf" />
@@ -35,7 +42,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_approved_icon"
         app:layout_constraintBottom_toBottomOf="@+id/tvLastCreated"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -45,9 +51,10 @@
         android:id="@+id/tvLastCreated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/colorTextBlackLight"
         android:layout_marginBottom="8dp"
-        android:textSize="@dimen/_10sdp"
+        android:textSize="@dimen/_8sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvFile"
         app:layout_constraintTop_toBottomOf="@+id/tvFile"
